# medykprojekt

./: 05_11_2025_W_2.csv  06_11_2025_W_2.csv  2025-11-05_09-05-29+1_WYQKBC_temperature_GS.csv  2025-11-06_08-42-29+1_WYQKBC_temperature.csv  main.py  med.ipynb  pyproject.toml
dane2/: 2025-10-30_08-42-19+1_WYQKBC_temperature_PP.csv
dane3/: 2025-10-31_08-51-05+1_WYQKBC_temperature_MB.csv
