[project]
name = "medykprojekt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "neurokit2>=0.2.13",
    "numba>=0.65.1",
    "numpy>=2.4.5",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]
